import string

from sandbox.schedule.schedule import Schedule


class Habit:
    name: string
    schedule: Schedule