@startuml character


package character{
    class Character{
        -clock : Clock
        -currentAction : Action
        -currentActionStarted : Time
        +properties : Map<String, String>
        +location : Location
        +update()
    }

    class Habit {
        name: String
    }

}

Character "1" *-- Map

Action ..> Character
Character ..> Action
Character ..> Location
Character o-- Habit
Habit "1" *-- Schedule

@enduml